# halo2-lib-no-fork

./: .gitignore  dev_notes.md
.cargo/: config.toml
halo2-base/: Cargo.toml
halo2-base/src/gates/: builder.rs  local_storage_fs.rs  range.rs
halo2-ecc/: Cargo.toml
halo2-ecc/configs/bls12_381/: bls_signature_circuit.config
halo2-ecc/configs/bn254/: bls_signature_circuit.config
halo2-ecc/results/bn254/: bls_signature_bench.csv  bls_signature_bench_default.csv  bls_signature_bench_release.csv
halo2-ecc/src/: lib.rs  wasm.rs
halo2-ecc/src/bigint/: carry_mod.rs
halo2-ecc/src/bls12_381/: bls_signature.rs  bls_signature_test.rs  final_exp.rs  frobenius_map_fp2.rs  mod.rs  notes.md  pairing.rs
halo2-ecc/src/bls12_381/tests/: bls_signature.rs  mod.rs  pairing.rs
halo2-ecc/src/bn254/: bls_signature.rs  bls_signature_test.rs  frobenius_map_fp2.rs  mod.rs
halo2-ecc/src/bn254/tests/: bls_signature.rs  bls_signature_test.rs  mod.rs
halo2-ecc/src/fields/: fp.rs  fp12.rs  fp2.rs
react_app/: .gitignore  App.css  README.md  package.json
react_app/src/: App.tsx  halo-worker.ts
react_app/src/components/: index.js
