[package]
name = "halo2-ecc"
version = "0.3.0"
edition = "2021"

[lib]
name = "halo2ecc"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
itertools = "0.10"
num-bigint = { version = "0.4", features = ["rand"] }
num-integer = "0.1"
num-traits = "0.2"
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
rand = "0.8"
rand_chacha = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.6.1"
test-case = "3.1.0"

# arithmetic
ff = "0.12"
group = "0.12"

halo2-base = { path = "../halo2-base", default-features = false }

[dev-dependencies]
ark-std = { version = "0.3.0", features = ["print-trace"] }
pprof = { version = "0.11", features = ["criterion", "flamegraph"] }
criterion = "0.4"
criterion-macro = "0.4"
halo2-base = { path = "../halo2-base", default-features = false, features = ["test-utils"] }

[features]
default = ["halo2-axiom", "display"]
dev-graph = ["halo2-base/dev-graph"]
display = ["halo2-base/display"]
halo2-pse = ["halo2-base/halo2-pse"]
halo2-axiom = ["halo2-base/halo2-axiom"]
jemallocator = ["halo2-base/jemallocator"]
mimalloc = ["halo2-base/mimalloc"]

[[bench]]
name = "fp_mul"
harness = false

[[bench]]
name = "msm"
harness = false

[[bench]]
name = "fixed_base_msm"
harness = false

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.2", features = ["js"]}
wasm-bindgen = { version = "0.2", features = ["serde-serialize"]}
console_error_panic_hook = "0.1.7"
rayon = "1.5"
wasm-bindgen-rayon = { version = "1.0"}
web-sys = { version = "0.3", features = ["Request", "Window", "Response"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
# stdweb = "0.4.17"
